--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: 🚀 Deploy Website to GitHub Pages
 on:
   push:
     branches:
-      - main  # Deploy on push to 'main' branch
-  workflow_dispatch:  # Allows manual trigger from GitHub Actions
+      - main  # Deploy when changes are pushed to 'main'
+  workflow_dispatch:  # Allows manual deployment trigger
 
 permissions:
   contents: read
@@ -20,12 +20,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🔨 Setup Node.js (Required for Deployment)
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: 📦 Upload Website Artifacts
-        uses: actions/upload-artifact@v3
+      - name: 📦 Upload Website Artifacts (Fixing Deprecation Issue)
+        uses: actions/upload-artifact@v4  # Updated version
         with:
           name: website-artifact
           path: ./web_application  # Save website files as artifacts
@@ -35,8 +35,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Download Website Artifacts
-        uses: actions/download-artifact@v3
+      - name: 📥 Download Website Artifacts (Using New Version)
+        uses: actions/download-artifact@v4  # Updated version
         with:
           name: website-artifact
           path: ./web_application  # Restore files from artifacts
@@ -44,7 +44,6 @@ jobs:
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./web_application  # Deploy the 'web_application' folder
 
       - name: 🔗 Provide Deployment Link
